test/domains/unsafeAssign/HaltChecksNDI.good
(x = 0)
HaltChecksNDI.chpl:14: error: halt reached - Checks in 'unsafeAssign' for arrays of non-default-initializable elements are not supported yet
